fix mathjax div overflow

--- a/_sass/_classes.scss
+++ b/_sass/_classes.scss
@@ -49,3 +49,9 @@
         order: -1;
     }
 }
+
+
+.MathJax_Display {
+    overflow: auto;
+    padding: 0.5em;
+}
